--- a/Frontend/movie-website/src/Style/Movie.css
+++ b/Frontend/movie-website/src/Style/Movie.css
@@ -72,7 +72,7 @@
 }
 #screenshotsImagesDiv> .screenshotsImages>img{
     width: 100%;
-    height: 100%;
+    height: 300px;
     object-fit: cover;
     border-radius: 4px;
 }
@@ -83,34 +83,44 @@
 }
 #downloadLinks{
     width: 80%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
+    padding-bottom: 10px;
     margin: auto;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 #downloadLinks>div{
-    width: 30%;
-    height: 100%;
+    width: 100%;
+    height: auto;
+    padding: 15px 10px;
     border-radius: 8px;
     box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
     color: white;
-    font-size: 25px;
+    margin-bottom: 35px;
+}
+#downloadLinks>div>button{
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    box-shadow: rgba(255, 255, 255, 0.02) 0px 1px 3px 0px, rgba(255, 255, 255, 0.15) 0px 0px 0px 1px;
+    background-color: #FEA641;
+    color: rgb(0, 0, 0);
+    font-size: 19px;
+    margin-top: 15px;
     cursor: pointer;
 }
-#downloadLinks>div>p{
-    display: block;
-    margin-top: 3px;
+#downloadLinks>div>button:hover{
+    background-color: rgb(136, 136, 136);
+    color: white;
 }
-#downloadLinks>div:hover{
-    color: #FEA641;
-    background-color: rgb(74, 71, 71);
-    font-size: 27px;
-}
-
 /* =========================================================================================================  */
 
 #movieInfoRight{
@@ -179,11 +189,8 @@
         width: 100%;
     }
     #downloadLinks>div{
-        width: 31%;
-        height: 80%;
+        width: 85%;
         font-size: 16px;
-    }
-    #downloadLinks>div:hover{
-        font-size: 18px;
+        text-align: center;
     }
 }
